<resources>
    <string name="app_name">知了</string>
    <string name="review">复习</string>
    <string name="record">记录</string>
    <string name="user">用户</string>
    <string name="back">返回</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="alpha">A</string>
    <string name="red">R</string>
    <string name="green">G</string>
    <string name="blue">B</string>
    <string name="default_">默认</string>
    <string name="tag_edit">标签编辑</string>
    <string name="tag_title">标签名称</string>
    <string name="tag_comment">标签备注</string>

    <string name="text">文本内容</string>
    <string name="text_size">文本大小</string>
    <string name="text_color">文本颜色</string>
    <string name="hint">提示内容</string>
    <string name="hint_size">提示内容大小</string>
    <string name="hint_color">提示内容颜色</string>
    <string name="width">宽度</string>
    <string name="height">高度</string>
    <string name="bg_color">背景颜色</string>
    <string name="fg_color">前景颜色</string>
    <string name="margin">外边距</string>
    <string name="padding">内边距</string>
    <string name="gravity">位置</string>
    <string name="text_style">文本样式</string>
    <string name="input_type">输入格式</string>
    <string name="editable">是否可编辑</string>
    <string name="min_line">最少行数</string>
    <string name="max_line">最多行数</string>
    <string name="orientation">方向</string>
    <string name="scale_type">显示方式</string>
    <string name="shape">形状</string>
    <string name="tint">颜色涂层</string>
    <string name="blur">模糊</string>

    <string name="record_type">记录类型</string>
    <string name="create_time">创建日期</string>
    <string name="record_tag">记录标签</string>

    <string name="review_strategy">复习策略</string>
    <string name="review_strategy_title">复习策略名称</string>
    <string name="remember_time">记忆完成次数</string>
    <string name="gap_time">间隔记忆时间</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="record_info">记录</string>
    <string name="setting">设置</string>
    <string name="no_login">未登录</string>
    <string name="sign_default">我是一颗小小的石头</string>
    <string name="user_info">个人信息</string>
    <string name="record_size">记录数量</string>
    <string name="record_type_size">记录类型数量</string>
    <string name="record_tag_size">标签数量</string>
    <string name="review_strategy_size">复习策略数量</string>
    <string name="last_backup">上次备份时间</string>
    <string name="record_num">20</string>
    <string name="set_record_type">编辑记录类型</string>
    <string name="set_record_tag">编辑标签</string>
    <string name="backup">备份</string>
    <string name="more_setting">更多设置</string>
    <string name="set_review_strategy">编辑复习策略</string>
    <string name="delete_record_type">删除</string>
    <string name="remember">记住了</string>
    <string name="not_remember">没记住</string>

    <string name="one_day">一天内</string>
    <string name="two_day">两天内</string>
    <string name="three_day">三天内</string>
    <string name="one_week">一周内</string>
    <string name="one_month">一月内</string>
    <string name="one_year">一年内</string>
    <string name="no_limit">不限</string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="logout">注销</string>
    <string name="user_id">用户账号</string>
    <string name="user_pwd">用户密码</string>
    <string name="user_name">用户名称</string>
    <string name="user_phone">手机号</string>
    <string name="verify_code">验证码</string>
    <string name="send_verify_code">发送验证码</string>
    <string name="user_avatar">用户头像</string>
    <string name="user_sign">用户签名</string>

    <string name="backup_info">备份信息</string>
    <string name="upload_backup">上传备份</string>
    <string name="download_backup">下载备份</string>

    <string name="no_more">没有更多内容了呢</string>

    <string name="haptic">震动反馈</string>

    <string name="default_date">2019–04–01 19:00</string>
</resources>
