<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:background="@color/romance"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        tools:ignore="NewApi"
        xmlns:tools="http://schemas.android.com/tools">

    <TextView
            android:text="@string/record_info"
            android:textColor="@color/light_slate_gray"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:id="@+id/ll_record_size_user"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp">

        <TextView
                android:text="@string/record_size"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tv_record_size_user"
                android:text="@string/record_num"
                android:textSize="15sp"
                android:textColor="@color/light_slate_gray"
                android:gravity="center"
                android:layout_width="50dp"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/ll_record_type_size_user"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center_vertical"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp">

        <TextView
                android:text="@string/record_type_size"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tv_record_type_size_user"
                android:text="@string/record_num"
                android:textSize="15sp"
                android:textColor="@color/light_slate_gray"
                android:gravity="center"
                android:layout_width="50dp"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/ll_record_tag_size_user"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center_vertical"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp">

        <TextView
                android:text="@string/record_tag_size"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/tv_record_tag_size_user"
                android:text="@string/record_num"
                android:textSize="15sp"
                android:textColor="@color/light_slate_gray"
                android:gravity="center"
                android:layout_width="50dp"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
            android:text="@string/setting"
            android:textColor="@color/light_slate_gray"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:id="@+id/ll_user_info_user"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/user_info"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        <ImageView
                android:src="@drawable/ic_right"
                android:padding="7dp"
                android:layout_marginEnd="15dp"
                android:layout_width="25dp"
                android:layout_height="25dp"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/ll_edit_record_type_user"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="45dp">

        <TextView
                android:text="@string/set_record_type"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        <ImageView
                android:src="@drawable/ic_right"
                android:padding="7dp"
                android:layout_marginEnd="15dp"
                android:layout_width="25dp"
                android:layout_height="25dp"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/ll_edit_review_strategy_user"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="45dp">

        <TextView
                android:text="@string/set_review_strategy"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        <ImageView
                android:src="@drawable/ic_right"
                android:padding="7dp"
                android:layout_marginEnd="15dp"
                android:layout_width="25dp"
                android:layout_height="25dp"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/ll_edit_record_tag_user"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="45dp">

        <TextView
                android:text="@string/set_record_tag"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        <ImageView
                android:src="@drawable/ic_right"
                android:padding="7dp"
                android:layout_marginEnd="15dp"
                android:layout_width="25dp"
                android:layout_height="25dp"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/ll_backup_user"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="45dp">

        <TextView
                android:text="@string/backup"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        <ImageView
                android:src="@drawable/ic_right"
                android:padding="7dp"
                android:layout_marginEnd="15dp"
                android:layout_width="25dp"
                android:layout_height="25dp"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/ll_more_setting_user"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="45dp">

        <TextView
                android:text="@string/more_setting"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        <ImageView
                android:src="@drawable/ic_right"
                android:padding="7dp"
                android:layout_marginEnd="15dp"
                android:layout_width="25dp"
                android:layout_height="25dp"/>
    </LinearLayout>
</LinearLayout>