<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include
        layout="@layout/toolbar"/>
    
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_title_record_tag_edit"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16dp"
            android:hint="@string/tag_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_title_record_tag_edit"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_comment_record_tag_edit"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16dp"
            android:hint="@string/tag_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_comment_record_tag_edit"
                android:maxLines="5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    
    <Button
            android:id="@+id/btn_record_tag_edit"
            android:text="@string/confirm"
            android:layout_gravity="center"
            android:layout_width="200dp" 
            android:layout_height="wrap_content"/>
</LinearLayout>