<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:background="@color/romance"
              android:layout_width="match_parent"
              android:layout_height="match_parent" tools:ignore="NewApi">

    <include
        layout="@layout/toolbar"/>
    
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent" android:layout_height="wrap_content">
            
            <LinearLayout
                    android:id="@+id/ll_avatar_user_info"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent" android:layout_height="wrap_content">
                
                <TextView
                        android:text="@string/user_avatar"
                        android:textColor="@color/monsoon"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:layout_width="0dp" android:layout_height="wrap_content"/>
                
                <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/civ_avatar_user_info"
                        android:src="@drawable/ic_avatar"
                        android:layout_width="60dp" android:layout_height="60dp"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/ll_id_user_info"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent" android:layout_height="wrap_content">

                <TextView
                        android:text="@string/user_id"
                        android:textColor="@color/monsoon"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:layout_width="0dp" android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/tv_id_user_info"
                        android:text="@string/app_name"
                        android:textColor="@color/monsoon"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:minWidth="100dp"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/ll_name_user_info"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent" android:layout_height="wrap_content">

                <TextView
                        android:text="@string/user_name"
                        android:textColor="@color/monsoon"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:layout_width="0dp" android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/tv_name_user_info"
                        android:text="@string/app_name"
                        android:textColor="@color/light_slate_gray"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:minWidth="100dp"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/ll_sign_user_info"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent" android:layout_height="wrap_content">

                <TextView
                        android:text="@string/user_sign"
                        android:textColor="@color/monsoon"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:layout_width="0dp" android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/tv_sign_user_info"
                        android:text="@string/sign_default"
                        android:textColor="@color/light_slate_gray"
                        android:textSize="13sp"
                        android:gravity="center"
                        android:minWidth="100dp"
                        android:maxWidth="200dp"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/ll_phone_user_info"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent" android:layout_height="wrap_content">

                <TextView
                        android:text="@string/user_phone"
                        android:textColor="@color/monsoon"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:layout_width="0dp" android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/tv_phone_user_info"
                        android:text="@string/app_name"
                        android:textColor="@color/light_slate_gray"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:minWidth="100dp"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            </LinearLayout>
            
            <Button
                    android:id="@+id/btn_logout_user_info"
                    android:text="@string/logout"
                    android:textColor="@color/romance"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/light_slate_gray"
                    android:layout_width="match_parent" android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>